--- a/machine_learning_cancer_severity_analysis_2015_2024.ipynb
+++ b/machine_learning_cancer_severity_analysis_2015_2024.ipynb
@@ -29,7 +29,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/RhyanMorais/Machine-Learning-aplicado-severidade-do-cancer/blob/main/02_machine_learning_cancer_severity_analysis_2015_2024.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/RhyanMorais/Machine-Learning-aplicado-severidade-do-cancer/blob/main/machine_learning_cancer_severity_analysis_2015_2024.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -49,6 +49,15 @@
       "metadata": {
         "id": "aTy6J3VGOgzJ"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "fHfiRI2D_-Lw"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -4430,6 +4439,17 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Conclusões Principais\n",
+        "\n",
+        "A análise dos resultados indicou que a Regressão Linear foi o modelo com melhor desempenho, alcançando um coeficiente de determinação R² de aproximadamente 79,58%, o que indica boa capacidade de explicação da variabilidade da severidade do câncer. As variáveis mais relevantes para a predição foram o nível de tabagismo, o risco genético, a poluição do ar, o uso de álcool e o nível de obesidade, evidenciando a influência de fatores comportamentais, genéticos e ambientais. Os resultados demonstram que a abordagem proposta pode ser aplicada em cenários de triagem clínica para estimar a gravidade do câncer e auxiliar na priorização de tratamentos. De forma geral, os algoritmos de regressão apresentaram melhor desempenho e maior assertividade quando comparados aos modelos de classificação.\n"
+      ],
+      "metadata": {
+        "id": "9h1igK8AAZqt"
+      }
     }
   ]
 }
